syntax = "proto3";

package ammo.client.example;

option go_package = "github.com/n-r-w/collector/example/api";

// TestMessage is a test message
message TestMessage {
  string message = 1;
  int64 data = 2;
}
